# Ethiopian-Crown

./: .gitignore  EthioCrown.sln
EthioCrown/: .gitignore  CMakeLists.txt  EthioCrown.vcxproj  EthioCrown.vcxproj.filters  V2_main.cpp  fragment_shader.glsl  fragment_shader.hpp  glad.c  main.cpp  shader.hpp  spikes.jfif  stb_image.h  vertex_shader.glsl  vertex_shader.hpp
EthioCrown/Dependencies/include/glad/: glad.h
EthioCrown/Dependencies/include/glm/: glm.cppm
EthioCrown/x64/Debug/: EthioCrown.exe.recipe  EthioCrown.ilk  vc143.idb
EthioCrown/x64/Debug/EthioCrown.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  EthioCrown.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GLB/: Three.js  index.html  usage.txt
GLB/libs/: environmentSpecular.env
